--- a/public/css/style.css
+++ b/public/css/style.css
@@ -543,6 +543,14 @@ p { font-size: 12px; font-style: normal; margin: 0;}
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px -1px rgba(0, 0, 0, 0.10);
 }
 
+.document-upload {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    width: 65%;
+    gap: 5px;
+}
+
 .document-input {
     display: flex;
     align-items: center;
@@ -556,7 +564,7 @@ p { font-size: 12px; font-style: normal; margin: 0;}
     line-height: 20px;
 }
 
-.document-upload {
+.document-field {
     display: flex;
     align-items: center;
     width: 70%;
@@ -999,16 +1007,32 @@ p { font-size: 12px; font-style: normal; margin: 0;}
     min-height: 100vh; 
 }
 
-.filepond--root {
+/* .filepond--root {
+    min-height: 120px; 
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
     border: 1px solid var(--colors-gray-400, #94A3B8) !important;
     border-radius: 4px;
-    background-color: #ffff;
+    background-color: #fff;
     width: 100%;
-    text-align: center;
+    box-sizing: border-box;
+    overflow: hidden;
+    position: relative; 
+    z-index: 10;
 }
 
 .filepond--root div {
-    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;  
+    align-items: center;      
+    text-align: center;      
+    width: 100%;
+    height: 100%;
 }
 
 .filepond--root h1 {
@@ -1029,6 +1053,7 @@ p { font-size: 12px; font-style: normal; margin: 0;}
     font-weight: 400;
     line-height: 150%; 
     text-decoration: none;
+    cursor: pointer;
 }
 
 .filepond--root p {
@@ -1041,6 +1066,100 @@ p { font-size: 12px; font-style: normal; margin: 0;}
     line-height: 150%;
 }
 
+.filepond--root {
+    pointer-events: auto; 
+} */
+ 
+.filepond--root {
+    min-height: 130px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border: 1px solid var(--colors-gray-400, #94A3B8) !important;
+    border-radius: 4px;
+    background-color: #fff;
+    width: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+
+.filepond-label-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    max-width: 300px; 
+    margin: 0 auto;
+}
+
+.filepond-icon {
+    width: 30px; 
+    margin-bottom: 5px;
+}
+
+.filepond-title {
+    color: var(--color-black, #000) !important;
+    font-family: "Nunito Sans" !important;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 120%; 
+    margin-bottom: 10px;
+}
+
+.filepond-link-description-wrapper {
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    gap: 3px; 
+    margin-bottom: 10px;
+}
+
+.filepond-link {
+    color: var(--colors-primary-600, #0284C7);
+    cursor: pointer;
+    font-family: Inter !important;
+    font-size: 8px !important;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.filepond-description {
+    color: var(--color-black, #000) !important;
+    font-family: Inter;
+    font-size: 8px !important;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.filepond-note {
+    color: var(--colors-gray-600, #475569) !important;
+    font-family: Inter !important;
+    font-size: 8px !important;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 150%; 
+}
+
+.filepond--root > div {
+    width: 100%;
+    max-width: 320px; 
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: white;
+}
+
 .note-editor {
     width: 100% !important;  
     min-height: 250px;     
@@ -1048,7 +1167,6 @@ p { font-size: 12px; font-style: normal; margin: 0;}
     border: 1px solid var(--colors-gray-300, #CBD5E1);
     background: var(--colors-white, #FFF);
 
-    /* Body Regular */
     font-family: 'Nunito Sans', sans-serif !important;
     font-size: 14px !important;
     font-style: normal !important;
